<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="matchDetailViewModel"
            type="com.wangchucheng.demos.foosballmatches.ui.matchdetail.MatchDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.matchdetail.MatchDetailFragment">

            <TextView
                android:id="@+id/first_player_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_player_headline"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />

            <TextView
                android:id="@+id/first_player_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/player_name_label"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/first_player_name_edit_text"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="AUTOFILL_HINT_PERSON_NAME"
                android:ems="10"
                android:hint="@string/first_player_name_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@={matchDetailViewModel.firstPlayerScore.player}"
                android:textColorHint="#8D6E63" />

            <TextView
                android:id="@+id/first_player_score_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/player_score_label"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/first_player_score_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="SCORE"
                android:ems="10"
                android:hint="@string/first_player_score_hint"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@={matchDetailViewModel.firstPlayerScore.score}"
                android:textColorHint="#8D6E63" />

            <TextView
                android:id="@+id/second_player_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/second_player_headline"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />

            <TextView
                android:id="@+id/second_player_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/player_name_label"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/second_player_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="AUTOFILL_HINT_PERSON_NAME"
                android:ems="10"
                android:hint="@string/second_player_name_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@={matchDetailViewModel.secondPlayerScore.player}"
                android:textColorHint="#8D6E63" />

            <TextView
                android:id="@+id/second_player_score_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/player_score_label"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/second_player_score_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="SCORE"
                android:ems="10"
                android:hint="@string/second_player_score_hint"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@={matchDetailViewModel.secondPlayerScore.score}"
                android:textColorHint="#8D6E63" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/save_button"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/save_button_description"
                    android:onClickListener="@{() -> matchDetailViewModel.onSave()}"
                    android:text="@string/save_button_text"
                    app:icon="@drawable/ic_baseline_check_24" />

                <Button
                    android:id="@+id/delete_button"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/delete_button_description"
                    android:text="@string/delete_button_text"
                    android:visibility="@{matchDetailViewModel.hasDeleteButton ? View.VISIBLE : View.GONE}"
                    app:icon="@drawable/ic_baseline_delete_24" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</layout>
