<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="rankingViewModel"
            type="com.wangchucheng.demos.foosballmatches.ui.ranking.RankingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/chip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/chip_label_text"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            app:layout_constraintBottom_toBottomOf="@+id/chip_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chip_group" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/ranking_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/chip_text"
            app:layout_constraintTop_toTopOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/game_number_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> rankingViewModel.orderByGameNum()}"
                android:text="@string/game_chip_text"
                android:textColor="#546E7A" />

            <com.google.android.material.chip.Chip
                android:id="@+id/win_number_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> rankingViewModel.orderByWinNum()}"
                android:text="@string/win_chip_text"
                android:textColor="#546E7A" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ranking_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_group"
            tools:context=".ui.ranking.RankingFragment" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/share_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/share_fab_description"
            android:text="@string/share_fab_text"
            app:icon="@drawable/ic_baseline_share_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>